# Student-Onboarding

./: .dockerignore  .gitignore  ARCHITECTURE_ANALYSIS.md  CMakeLists.txt  DATABASE.md  DOCKER.md  LOGGING.md  MIGRATION_SYSTEM.md  README.md  WORKFLOW.md
config/: curriculum_accredited.json  curriculum_config.json  curriculum_vocational.json  forms_config.json
database/: README.md  install.sql  postgresql-schema.sql  postgresql-simple.sql  postgresql-snake-case.sql  schema.sql  seed_data.sql  sqlite3-schema.ddl
database/migrations/: 001_add_student_fields.sql  002_add_admin_tables.sql  003_add_endorsement_support.sql  004_extend_curriculum_schema.sql  005_seed_accredited_curriculum.sql  005_seed_vocational_curriculum.sql  006_flush_curriculum.sql  007_institution_settings.sql  008_add_duration_interval.sql  010_academic_history_compound_key.sql  011_emergency_contact_compound_key.sql  013_add_classroom_feature.sql  014_add_instructor_feature.sql  014_consolidate_users_to_app_user.sql  015_unified_user_authentication.sql  016_activity_log.sql
database/migrations/archive/: 002_add_admin_tables.sql  003_seed_sample_students.sql  005_seed_vocational_curriculum.sql  009_add_institution_type.sql  010_academic_history_compound_key.sql  012_financial_aid_missing_columns.sql  README.md
database/scripts/: README.md  switch_to_accredited.sql  switch_to_vocational.sql
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ADMIN_DASHBOARD_DESIGN.md  AUTHENTICATION.md  Administration_User_Guide.md  CLASSROOM.md  CURRICULUM_SEEDING.md  DATA_MODEL_CHANGES.md  INSTRUCTOR.md
resources/: admin-styles.css  classroom.css  instructor.css  styles.css
scripts/: seed_curriculum.sh
src/: main.cpp
src/admin/: AdminApp.cpp  AdminApp.h  AdminAuthManager.cpp  AdminAuthManager.h  AdminDashboard.cpp  AdminDashboard.h  AdminLoginWidget.cpp  AdminLoginWidget.h  AdminNavigation.cpp  AdminNavigation.h  AdminSidebar.cpp  AdminSidebar.h
src/admin/activity/: ActivityListWidget.cpp  ActivityListWidget.h
src/admin/curriculum/: CurriculumEditorWidget.cpp  CurriculumEditorWidget.h  CurriculumListWidget.cpp  CurriculumListWidget.h
src/admin/forms/: FormDetailViewer.cpp  FormDetailViewer.h  FormPdfPreviewWidget.cpp  FormPdfPreviewWidget.h  FormSubmissionsWidget.cpp  FormSubmissionsWidget.h  FormTypeDetailWidget.cpp  FormTypeDetailWidget.h  FormTypesListWidget.cpp  FormTypesListWidget.h
src/admin/models/: AdminSession.cpp  AdminSession.h  AdminUser.cpp  AdminUser.h
src/admin/settings/: InstitutionSettingsWidget.cpp  InstitutionSettingsWidget.h
src/admin/students/: StudentDetailWidget.cpp  StudentDetailWidget.h  StudentFormViewer.cpp  StudentFormViewer.h  StudentListWidget.cpp  StudentListWidget.h
src/admin/users/: UserEditorWidget.cpp  UserEditorWidget.h  UserListWidget.cpp  UserListWidget.h
src/api/: ActivityLogService.cpp  ActivityLogService.h  ApiClient.cpp  ApiClient.h  ClassroomService.cpp  ClassroomService.h  FormSubmissionService.cpp  FormSubmissionService.h  InstructorService.cpp  InstructorService.h  PdfGenerator.cpp  PdfGenerator.h
src/app/: AppConfig.h  StudentIntakeApp.cpp  StudentIntakeApp.h
src/auth/: AppUserAuthService.cpp  AppUserAuthService.h  AuthManager.cpp  AuthManager.h  AuthService.cpp  AuthService.h  LoginWidget.cpp  LoginWidget.h  RegisterWidget.cpp  RegisterWidget.h  UnifiedLoginWidget.cpp  UnifiedLoginWidget.h
src/classroom/: AssessmentReportWidget.cpp  AssessmentReportWidget.h  AssessmentWidget.cpp  AssessmentWidget.h  ClassroomWidget.cpp  ClassroomWidget.h
src/curriculum/: CurriculumManager.cpp  CurriculumManager.h  CurriculumSelector.cpp  CurriculumSelector.h
src/forms/: AcademicHistoryForm.cpp  AcademicHistoryForm.h  BaseForm.cpp  BaseForm.h  ConsentForm.cpp  ConsentForm.h  DocumentUploadForm.cpp  DocumentUploadForm.h  EmergencyContactForm.cpp  EmergencyContactForm.h  FinancialAidForm.cpp  FinancialAidForm.h  FormFactory.cpp  FormFactory.h  MedicalInfoForm.cpp  MedicalInfoForm.h  PersonalInfoForm.cpp  PersonalInfoForm.h
src/instructor/: FeedbackWidget.cpp  FeedbackWidget.h  InstructorDashboardWidget.cpp  InstructorDashboardWidget.h  SchedulingWidget.cpp  SchedulingWidget.h  StudentProgressViewWidget.cpp  StudentProgressViewWidget.h  ValidationWidget.cpp  ValidationWidget.h
src/models/: AcademicHistory.cpp  AcademicHistory.h  ActivityLog.cpp  ActivityLog.h  AppUser.cpp  AppUser.h  Assessment.cpp  Assessment.h  Course.cpp  Course.h  Curriculum.cpp  Curriculum.h  EmergencyContact.cpp  EmergencyContact.h  FormData.cpp  FormData.h  InstitutionSettings.cpp  InstitutionSettings.h  Instructor.cpp  Instructor.h  Student.cpp  Student.h  StudentAddress.cpp  StudentAddress.h  StudentProgress.cpp  StudentProgress.h  TrainingSession.cpp  TrainingSession.h  User.cpp  User.h
src/session/: SessionManager.cpp  SessionManager.h  StudentSession.cpp  StudentSession.h
src/utils/: Logger.h
src/widgets/: DashboardWidget.cpp  DashboardWidget.h  FormContainer.cpp  FormContainer.h  NavigationWidget.cpp  NavigationWidget.h  ProgressWidget.cpp  ProgressWidget.h  RoleNavigationWidget.cpp  RoleNavigationWidget.h
tests/: CMakeLists.txt
tests/models/: AcademicHistoryTest.cpp  ActivityLogTest.cpp  CurriculumTest.cpp  EmergencyContactTest.cpp  StudentTest.cpp  UserTest.cpp
tests/services/: FormSubmissionServiceTest.cpp
tests/session/: StudentSessionTest.cpp
tests/utils/: TestUtils.cpp  TestUtils.h
